; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_common/extr_eap_fast_common.c_eap_fast_derive_key.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_common/extr_eap_fast_common.c_eap_fast_derive_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tls_connection = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @eap_fast_derive_key(i8* %0, %struct.tls_connection* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.tls_connection*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store %struct.tls_connection* %1, %struct.tls_connection** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i64, i64* %7, align 8
  %10 = call i32* @os_malloc(i64 %9)
  store i32* %10, i32** %8, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %26

14:                                               ; preds = %3
  %15 = load i8*, i8** %5, align 8
  %16 = load %struct.tls_connection*, %struct.tls_connection** %6, align 8
  %17 = load i32*, i32** %8, align 8
  %18 = load i64, i64* %7, align 8
  %19 = call i64 @tls_connection_get_eap_fast_key(i8* %15, %struct.tls_connection* %16, i32* %17, i64 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %14
  %22 = load i32*, i32** %8, align 8
  %23 = call i32 @os_free(i32* %22)
  store i32* null, i32** %4, align 8
  br label %26

24:                                               ; preds = %14
  %25 = load i32*, i32** %8, align 8
  store i32* %25, i32** %4, align 8
  br label %26

26:                                               ; preds = %24, %21, %13
  %27 = load i32*, i32** %4, align 8
  ret i32* %27
}

declare dso_local i32* @os_malloc(i64) #1

declare dso_local i64 @tls_connection_get_eap_fast_key(i8*, %struct.tls_connection*, i32*, i64) #1

declare dso_local i32 @os_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
